feat: implement request id to data exchange request
